add images support

--- a/server/views/template1.ejs
+++ b/server/views/template1.ejs
@@ -10,7 +10,7 @@
     <div><%= username %></div>
     <div><%= email %></div>
     <div><%= about %></div>
-    <img src="<%= profile_image %>" alt="pic" />
+    <img src="http://localhost:5000<%= profile_image %>" alt="pic" />
 
     <div>
       <% Object.keys(education).forEach(function(prop) { %>
