feat: auth pages

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -20,5 +20,6 @@ a {
   --primary-bg: #fcd8d4;
   --nav-bg: #fdf6f0;
   --mob-nav: #f8e2cf;
+  --mob-nav-dark: #ffd7b5;
   --primary-text: #11132c;
 }
