fix: template profile_image not found

--- a/server/views/template_template1.ejs
+++ b/server/views/template_template1.ejs
@@ -69,7 +69,7 @@
         <img
           width="300"
           height="400"
-          src="http://localhost:5000/images/madara.jpg"
+          src="http://localhost:5000/images/template_madara.jpg"
           alt="Uchiha Madara"
         />
       </div>
