feat: improve design of template1

--- a/server/views/template1.ejs
+++ b/server/views/template1.ejs
@@ -10,6 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap"
       rel="stylesheet"
     />
+
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU"
+      crossorigin="anonymous"
+    />
     <title><%= username %></title>
   </head>
   <style>
@@ -17,45 +25,69 @@
     body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
       color: white;
+      box-sizing: border-box;
       background: rgb(255, 224, 246);
       background: linear-gradient(
         133deg,
-        rgba(255, 224, 246, 1) 0%,
-        rgba(147, 2, 12, 1) 41%
+        rgba(29, 29, 29, 1) 0%,
+        rgba(147, 2, 12, 1) 51%
       );
     }
     * {
       font-family: "Lato", sans-serif;
     }
     a {
-      color: white;
+      color: rgb(209, 209, 209);
+    }
+    h1 {
+      font-weight: bold;
+    }
+    @media only screen and (max-width: 900px) {
+      .main {
+        flex-direction: column;
+        margin-bottom: 5vh;
+      }
+      .education,
+      .project,
+      .info {
+        flex-direction: column;
+      }
+      h1 {
+        font-size: 2.3rem;
+      }
     }
     .main {
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       justify-content: space-around;
       align-items: center;
-      flex-wrap: wrap;
-    }
-    .main .intro{
-      max-width: 50vw;
     }
     .main h1 {
+      color: rgb(216, 216, 216);
       font-size: 4rem;
       font-weight: bold;
     }
     .main h2 {
+      color: rgba(255, 255, 255, 0.705);
       font-size: 1rem;
+    }
+    .main .intro {
+      max-width: 60vw;
+      padding: 0px 3vw;
     }
     .education,
     .project,
     .info {
-      padding: 5vh;
+      padding: 2vh;
       display: flex;
       justify-content: space-around;
       align-items: center;
+    }
+    .education ul,
+    .project ul,
+    .info ul {
+      width: 70%;
     }
     .contact {
       padding: 5vh;
@@ -64,8 +96,47 @@
       align-items: center;
       flex-direction: column;
     }
+    .bnav {
+      background: rgba(53, 53, 53, 0) !important;
+    }
   </style>
   <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark bnav">
+      <div class="container-fluid">
+        <a class="navbar-brand px-3">Madara</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#intro">INTRO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#education">EDUCATION</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#projects">PROJECTS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#info">MY INFO</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">CONTACT</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="main">
       <div class="intro">
         <h1>Hi there,</h1>
@@ -81,44 +152,91 @@
         />
       </div>
     </div>
-    <div class="education">
-      <h2>Education</h2>
-      <% Object.keys(education).forEach(function(prop) { %>
+
+    <!-- Education -->
+    <div class="education" id="education">
+      <h1>Education</h1>
       <ul>
-      <li><%-education[prop].title %></li>
-      <li><%- education[prop].degree %></li>
-      <li><%- education[prop].graduation_year %></li>
-      <li><%- education[prop].score %></li>
+        <% Object.keys(education).forEach(function(prop) { %>
+        <br />
+        <li>
+          <ul>
+            <li><h3><%-education[prop].title %></h3></li>
+            <li><%- education[prop].degree %></li>
+            <li><%- education[prop].graduation_year %></li>
+            <li><%- education[prop].score %></li>
+          </ul>
+        </li>
+        <br />
+        <% }); %>
       </ul>
-      <% }); %>
     </div>
-    <div class="project">
-      <h2>Projects</h2>
-      <% Object.keys(projects).forEach(function(prop) { %>
+
+    <!-- Projects -->
+    <div class="project" id="projects">
+      <h1>Projects</h1>
       <ul>
-      <li><%- projects[prop].title %></li>
-      <li><%- projects[prop].description %></li>
-      <li><%-projects[prop].date %></li>
+        <% Object.keys(projects).forEach(function(prop) { %>
+        <br />
+        <li>
+          <ul>
+            <li><h3><%- projects[prop].title %></h3></li>
+            <li><%- projects[prop].description %></li>
+            <li><%-projects[prop].date %></li>
+          </ul>
+        </li>
+        <br />
+        <% }); %>
       </ul>
-      <% }); %>
     </div>
-    <div class="info">
-      <h2>More info</h2>
+
+    <!-- info -->
+    <div class="info" id="info">
+      <h1>More info</h1>
       <ul>
-      <% Object.keys(info).forEach(function(prop) { %>
-        <ul>
-      <li><%- info[prop].title %></li>
-      <li><%- info[prop].description %></li>
-      <li><%- info[prop].year %></li>
-        </ul>
-      <% }); %>
+        <% Object.keys(info).forEach(function(prop) { %>
+        <br />
+        <li>
+          <ul>
+            <li><h3><%- info[prop].title %></h3></li>
+            <li><%- info[prop].year %></li>
+            <li><%- info[prop].infoType %></li>
+            <li><%- info[prop].description %></li>
+          </ul>
+        </li>
+        <br />
+        <% }); %>
+      </ul>
     </div>
-    <div class="contact">
-      <a href="mailto:<%= email %>"><%= email %></a>
-      <a href="<%= linkedin_profile %>"><%= linkedin_profile %></a>
-      <a href="<%= github_profile %>"><%= github_profile %></a>
-      <a href="<%= codechef_profile %>"><%= codechef_profile %></a>
-      <a href="<%= codeforces_profile %>"><%= codeforces_profile %></a>
+    <div class="contact" id="contact">
+      <h1>Contact Me</h1>
+      <span>Email: <a href="mailto:<%= email %>"><%= email %></a></span>
+      <span
+        >Linkedin:
+        <a href="<%= linkedin_profile %>"><%= linkedin_profile %></a></span
+      >
+      <span
+        >Github: <a href="<%= github_profile %>"><%= github_profile %></a></span
+      >
+      <span
+        >Codechef:
+        <a href="<%= codechef_profile %>"><%= codechef_profile %></a></span
+      >
+      <span
+        >Codeforces:
+        <a href="<%= codeforces_profile %>"><%= codeforces_profile %></a></span
+      >
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+      integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+      integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
