--- a/server/views/template_template4.ejs
+++ b/server/views/template_template4.ejs
@@ -237,7 +237,7 @@
   </div>
 
    <!-- contact -->
-   <div id="contact"class="conatiner">
+   <div id="contact"class="container">
 
     <br><br>
     <h1>Contact_Me</h1>
