--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -18,6 +18,7 @@ a {
 
 :root {
   --primary-bg: #fcd8d4;
+  --secondary-bg: #f7e4e0;
   --nav-bg: #fdf6f0;
   --mob-nav: #f8e2cf;
   --mob-nav-dark: #ffd7b5;
