fix(template): typo fix in template 1

--- a/server/views/template1.ejs
+++ b/server/views/template1.ejs
@@ -104,7 +104,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark bnav">
       <div class="container-fluid">
-        <a class="navbar-brand px-3">Madara</a>
+        <a class="navbar-brand px-3"><%= username %></a>
         <button
           class="navbar-toggler"
           type="button"
